nova_tests/negative_capability/for_in_no_iterator.nv
// EXPECT_COMPILE_ERROR has neither `mut next() -> Option[T]` nor `iter() -> Iterable[T]`
//
// Plan 39 Issue D negative test: type без `next()` и без `iter()`
// должен компилироваться с **explicit D58 diagnostic**, не generic
// «unsupported iterator type 'X'».
//
// Spec D58: for-in требует один из методов на receiver type.

module negative_capability.for_in_no_iterator

type NotIterable {
    value int
}

fn main() -> int {
    ro bad = NotIterable { value: 42 }
    for x in bad {
        // unreachable: codegen error на for-in
        ro _ = x
    }
    0
}
